how to import bibtex sources

--- a/Labs/LaTeX/Script/how_to_latex.tex
+++ b/Labs/LaTeX/Script/how_to_latex.tex
@@ -688,7 +688,7 @@ In LaTeX, everything can be labeled, and after that it can be referenced. Consid
 In every scientific article it is important to clearly state your sources. You need to cite within your article and list all used sources at the end within your bibliography. 
 Basically, there are two options to use references in \LaTeX. One is including references in the \LaTeX\ file directly, the other one is maintaining an external file in BibTex format. For most cases, the latter will be preferred. There are few reasons to keep references directly in the \LaTeX\ file. One could be that a journal requires the submission in one \LaTeX\ file only (but in most cases you are allowed to include a .bbl file, which is created by bibTex). In the following, we focus on the link to the BibTex format. 
 
-An excellent program to built your BibTex database is Jabref, a free, open-source literature manager, which uses the BibTex file format. As it was written in java and distributed as a jar file, you can use it on any operating system with a java virtual machine installed. It is first choice for everyone who works with latex, but it may also be linked to Microsoft Word\marginnote{Comprehensive information on how to link you Jabref database with Microsoft Word can be found at: \href{http://www.medicalnerds.com/how-to-use-jabrefbibtex-with-microsoft-word-2003/}{http://www.medicalnerds.com/how-to-use-jabrefbibtex-with-microsoft-word-2003/}}. 
+An excellent program to built your BibTex database is Jabref, a free, open-source literature manager, which uses the BibTex file format. As it was written in java and distributed as a jar file, you can use it on any operating system with a java virtual machine installed. It is first choice for everyone who works with latex, but it may also be linked to Microsoft Word\marginnote{Comprehensive information on how to link your Jabref database with Microsoft Word can be found at: \href{http://www.medicalnerds.com/how-to-use-jabrefbibtex-with-microsoft-word-2003/}{http://www.medicalnerds.com/how-to-use-jabrefbibtex-with-microsoft-word-2003/}}. 
 
 This is an example of how an entry your BibTex database could look like:
 \begin{lstlisting}[language=BibTeX]
@@ -704,6 +704,13 @@ number = {34},
 month = aug,
 }
 \end{lstlisting} 
+In hardly any case you have to type this yourself into your literature database in jabref. Here are some examples how to automatically import such sources from (1) journals, (2) databases (google scholar, ISI, \ldots) or even (3) package citations from \textsf{R}:
+\begin{enumerate}
+	\item Importing BibTex sources from the journal website is highly recommended, since it is most likely to get the correct spelling of the citation from there. Instead of directly reading the paper (pdf) you may search for a ``export citation" button or similar on the journal website. After clicking on it several format options should be provided. If you drag-and-drop the source to jabref it does not matter which format you choose (jabref can handle it). If you import it as BibTex source, choose the BibTex format.
+	\item Faster but with higher risk of typos is the citation export directly from (a) google scholar or (b) ISI: (a) click on ``cite" below the requested google scholar entry. At the bottom of the pop-up window you may choose the source format (see above). (b) 
+	\item If you want to cite \textsf{R} or an \textsf{R}-package, you may obtain the BibTex source directly from R. For citing the sole program simply type \textsf{citation()} into the console and hit enter. If you wish to cite a specific package, e.g. \textsf{MASS} the command to use is: \textsf{citation(``MASS")}.  
+\end{enumerate}
+
 %For this purpose \LaTeX provides you with a link to the BibTeX format. 
 Now that you have set up a BibTex database you can easily include it into your document and link the sources within your .bib file. This requires you to locate your database inside your project folder similar to your pictures and graphics. Now you can include this database by using the command \verb!\bibliography{}! at the end of your document, with the name of your database in the wavy brackets. The style of your bibliography is determined by the \verb!\bibliographystyle{}! command before the \verb!\bibliography{}! command and the name of the style file in the wavy brackets. Here we use the \emph{chicago} citation style. To fully integrate the database into you \LaTeX\ file you need to compile Bibtex as well as \LaTeX\ at least two times.\marginnote{To get your bibTex file into your document make sure you use the same format. You might need to compile bibTex and \LaTeX\ several times until everything is up and running!} This process is still slightly faulty and it might require more compilation attempts until everything works properly. Also make sure you are using the correct formatting (e.g. UTF-8). Once everything is set you can reference your sources within your document using the \verb!\citep{}! and \verb!\cite{}! commands. The classical citation command is \verb!\citep{}!. It leads to your cited source enclosed in brackets while \verb!\cite{}! and \verb!\citet{}! only put the date of the citation in brackets allowing for an in-text citation. Once you cite a source in your document it will be listed in your bibliography as well. In this tutorial it is the last step but it is generally advisable to set up your bibliography at the beginning for your project to make citing fluent and to avoid mistakes. Now add a chapter about citations to your document and after that add your bibliography. A literature database is supplied in your training material. To make your citations look nicer and allow for more options include the \emph{natbib} package in your document. You can adjust the punctuation of your references by using the \verb!\bibpunct! command in your preamble. After including the \emph{natbib} package add the following line:\\
 \verb!\bibpunct{(}{)}{;}{a}{}{,}!
