--- a/Labs/LaTeX/Script/how_to_latex.tex
+++ b/Labs/LaTeX/Script/how_to_latex.tex
@@ -93,6 +93,13 @@ This tutorial will help you start working with \LaTeX. You will learn how to set
  
 The first and most common is called \emph{"What You See Is What You Get"} (WYSIWYG). This describes software such as Open Office, Microsoft Word etc. where you can see how your document is going to look in the end while you are working on it but it might be difficult to create a document exactly the way you wanted it to be. The second type is called \emph{"What You Get Is What You Want"}(WYGIWYW). This is the category \LaTeX\ belongs to. It means that while you are working on your  document you do not get a visual representation of the final result but your final result will be the way you imagined it when you started.  	
 
+\paragraph{Templates}
+Since the basic structure of \LaTeX\ documents of the same class is similar in most cases, it may save you some time to use existing templates. Prof. Dormann created such template for a Master's thesis. It is available \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/LaTeX_Templates/Template-BScMSc-Freiburg}{here}.
+ 
+Other templates for the Tufte-style book (book\_1), the Legrand Orange book (book\_2) or some stylish article (article\_3) can be found \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/LaTeX_Templates/LatexTemplates}{here}.
+ 
+The \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/Practical}{\LaTeX\ document we use for the \LaTeX\ practical} of this course can also be used as template for a simple article. 
+
 \chapter{Setting up \LaTeX\ on your computer}
 
 First you need to set up \LaTeX\ on your computer. Basically, a \LaTeX\ system consists of two component: a latex distribution, and an editor.
